# self-evolving-research-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/rules/: experiments.md  python.md
docs/: architecture.md  research_report.md  tech_decisions.md
docs/learning/: 00-learning-roadmap.md  01-tool-use-and-function-calling.md  02-agentic-rag.md  03-agent-as-judge.md  04-self-evolution-mechanism.md  05-multi-agent-orchestration.md  06-prompt-engineering-for-agents.md  07-testing-agent-systems.md  08-rag-pipeline-integration.md
experiments/: calibrate_attribution.py  calibrate_nli.py  citation_grounding.py  citation_nli.py  compute_ci.py  inspect_agent_io.py  kb_ablation.py  p2_repeated_smoke_test.py  p2_smoke_test.py  pdf_ablation.py  rag_ablation.py  reference_recall.py  self_evolution.py  self_evolution_multi.py  self_evolution_repeated.py  surge_benchmark.py  trace_demo.py  validate_multi_critic.py
experiments/calibration/: nli_calibration_sample.csv
experiments/results/: attribution_calibration.json  bootstrap_ci_posthoc.json  citation_grounding_log.txt  citation_nli.json  (+9 more)
memory/: plan_2026_04_09.md  retro.md  session_2026_04_08.md  status.md  tasks.md
tests/: test_agent_traces.py  test_citation_verifier.py  test_core.py  test_critic.py  test_evaluation.py  test_knowledge_base.py  test_llm_integration.py  test_pdf.py  test_pipeline.py  test_pipeline_integration.py  test_pipeline_verification.py  test_planner.py  test_rag.py  test_reader_writer.py  test_retriever.py  test_search.py  test_statistics.py
(+27 files in other folders)
